--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "start": "node app.js",
     "start:dev": "nodemon app.js",
-    "test": "jest --verbose",
-    "test:watch": "jest --watchAll --verbose",
+    "test": "npm run test:unit",
+    "test:unit": "jest",
+    "test:unit:watch": "npm run test:unit -- --watch",
     "lint": "eslint --cache --fix",
     "prepare": "husky install"
   },
@@ -37,6 +38,13 @@
     "jest": "^26.0.1",
     "nodemon": "^2.0.7",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.0.5"
+    "prettier": "^2.0.5",
+    "typesync": "^0.8.0"
+  },
+  "lint-staged": {
+    "*.js": "eslint --cache --fix",
+    "package.json": [
+      "typesync --silent"
+    ]
   }
 }
