--- a/package.json
+++ b/package.json
@@ -4,28 +4,20 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
-    "start:dev": "nodemon app.js",
     "test": "npm run test:unit",
     "test:unit": "jest",
     "test:unit:watch": "npm run test:unit -- --watch",
     "lint": "eslint --cache --fix",
     "prepare": "husky install"
   },
-  "author": "Julian Ostmo <Julian.Ostmo@hotmail.com>",
+  "author": "Toby Schaeffer",
   "license": "ISC",
-  "dependencies": {
-    "config": "^3.3.6",
-    "express": "^4.17.1",
-    "swagger-ui-express": "^4.1.6"
-  },
   "devDependencies": {
     "@commitlint/cli": "^9.1.2",
     "@commitlint/config-conventional": "^11.0.0",
-    "@types/eslint": "^7.2.0",
+    "@types/eslint": "^7.29.0",
     "@types/eslint-plugin-prettier": "^3.1.0",
-    "@types/jest": "^26.0.0",
-    "@types/prettier": "^2.0.2",
+    "@types/prettier": "^2.4.3",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.5.0",
     "eslint-config-airbnb": "^18.2.0",
@@ -36,7 +28,6 @@
     "eslint-plugin-react": "^7.20.5",
     "husky": "^6.0.0",
     "jest": "^26.0.1",
-    "nodemon": "^2.0.7",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.5",
     "typesync": "^0.8.0"
