--- a/jest.config.json
+++ b/jest.config.json
@@ -1,12 +1,14 @@
 {
   "testEnvironment": "node",
+  "verbose": true,
   "collectCoverage": true,
+  "collectCoverageFrom": ["src/**/*.js", "src/*.js"],
   "coverageThreshold": {
     "global": {
       "branches": 100,
       "functions": 100,
       "lines": 100,
-      "statements": 0
+      "statements": 100
     }
   },
   "clearMocks": true,
