--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "lint-staged": {
     "*.js": "eslint --cache --fix",
+    "*.{js,css,md}": "prettier --write",
     "package.json": [
       "typesync --silent"
     ]
