--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "npm run test:unit",
+    "test": "snyk test && npm run test:unit",
     "test:unit": "jest",
     "test:unit:watch": "npm run test:unit -- --watch",
     "lint": "eslint --cache --fix",
@@ -25,11 +25,10 @@
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.20.5",
     "husky": "^6.0.0",
     "jest": "^26.0.1",
-    "npm-run-all": "^4.1.5",
     "prettier": "^2.0.5",
+    "snyk": "^1.848.0",
     "typesync": "^0.8.0"
   },
   "lint-staged": {
