--- a/package.json
+++ b/package.json
@@ -18,15 +18,14 @@
     "@types/eslint": "^7.29.0",
     "@types/eslint-plugin-prettier": "^3.1.0",
     "@types/prettier": "^2.4.3",
-    "babel-eslint": "^10.1.0",
     "eslint": "^7.5.0",
-    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-prettier": "^3.1.4",
     "husky": "^6.0.0",
-    "jest": "^26.0.1",
+    "jest": "^26.4.2",
+    "lint-staged": "^12.3.3",
     "prettier": "^2.0.5",
     "snyk": "^1.848.0",
     "typesync": "^0.8.0"
