--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
+    "detect-secrets": "cross-env-shell docker run --rm -v ${INIT_CWD}:/code ibmcom/detect-secrets:0.13.1.ibm.47.dss --baseline .secrets.baseline",
+    "detect-secrets:update-baseline": "cross-env-shell docker run --rm -v ${INIT_CWD}:/code ibmcom/detect-secrets:0.13.1.ibm.47.dss scan --update .secrets.baseline",
     "test": "snyk test --dev && npm run test:unit",
     "test:unit": "jest",
     "test:unit:watch": "npm run test:unit -- --watch",
@@ -18,6 +20,7 @@
     "@types/eslint": "^7.29.0",
     "@types/eslint-plugin-prettier": "^3.1.0",
     "@types/prettier": "^2.4.3",
+    "cross-env": "^7.0.3",
     "eslint": "^7.5.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^6.11.0",
